--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.1.3",
     "resize-observer-polyfill": "^1.5.1",
     "styletron-engine-atomic": "^1.6.2",
     "styletron-react": "^6.1.1",
