--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pixi.js": "^6.5.0",
     "react": "^18.0.0",
     "react-colorful": "^5.5.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.0",
     "react-player": "^2.10.1",
