--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@layerhub-io/react": "^0.2.6",
     "@layerhub-io/react-custom-scrollbar": "^0.0.1",
     "@layerhub-io/use-timer": "^0.1.1",
+    "@react-hooks-library/core": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "^17.0.35",
     "are-passive-events-supported": "^1.1.1",
