fix bug of image editor

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "baseui": "^12.0.0",
     "i18next": "^21.8.13",
+    "image-size": "^1.0.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
