--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@layerhub-io/react": "^0.2.6",
     "@layerhub-io/react-custom-scrollbar": "^0.0.1",
     "@layerhub-io/use-timer": "^0.1.1",
+    "@mui/material": "^5.14.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@react-hooks-library/core": "^0.5.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "^17.0.35",
@@ -36,6 +40,7 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.1.3",
     "resize-observer-polyfill": "^1.5.1",
+    "styled-components": "^6.1.0",
     "styletron-engine-atomic": "^1.6.2",
     "styletron-react": "^6.1.1",
     "use-latest": "^1.2.1",
