--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-player": "^2.10.1",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.18.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^6.1.0",
