--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.0",
     "react-player": "^2.10.1",
+    "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
