--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "are-passive-events-supported": "^1.1.1",
     "axios": "^0.27.2",
     "baseui": "^12.0.0",
+    "i": "^0.3.7",
     "i18next": "^21.8.13",
     "image-size": "^1.0.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
     "nanoid": "^3.3.4",
+    "npm": "^10.2.4",
     "pixi.js": "^6.5.0",
     "react": "^18.0.0",
     "react-colorful": "^5.5.1",
