--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.0",
+    "react-icons": "^4.12.0",
     "react-player": "^2.10.1",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
