--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "styled-components": "^6.1.0",
     "styletron-engine-atomic": "^1.6.2",
     "styletron-react": "^6.1.1",
+    "swiper": "^11.0.5",
     "use-latest": "^1.2.1",
     "uuidv4": "^6.2.13",
     "vite-plugin-mkcert": "^1.16.0"
