--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "npm": "^10.2.4",
     "pixi.js": "^6.5.0",
     "react": "^18.0.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-colorful": "^5.5.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
@@ -60,6 +61,7 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.10.3",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.69.5",
     "scss": "^0.2.4",
