--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "are-passive-events-supported": "^1.1.1",
     "axios": "^0.27.2",
     "baseui": "^12.0.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
     "echarts": "^5.4.3",
     "get-port": "^7.0.0",
