--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "mime": "^3.0.0",
+    "mui-color-input": "^2.0.1",
     "nanoid": "^3.3.4",
     "npm": "^10.2.4",
     "pixi.js": "^6.5.0",
