--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "image-size": "^1.0.2",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
