--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "baseui": "^12.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "echarts": "^5.4.3",
     "get-port": "^7.0.0",
     "i": "^0.3.7",
