--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "styletron-engine-atomic": "^1.6.2",
     "styletron-react": "^6.1.1",
     "swiper": "^11.0.5",
+    "use-debounce": "^10.0.0",
     "use-latest": "^1.2.1",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
