--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react-colorful": "^5.5.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-i18next": "^11.18.0",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
