--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nanoid": "^3.3.4",
     "npm": "^10.2.4",
     "pixi.js": "^6.5.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-colorful": "^5.5.1",
